[package]
name = "ipapi-client"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/kakserpom/ipapi-client-rs"
description = "An API client for ip-api.com"
license = "MIT"
[dependencies]
anyhow = {optional = true, version = "1.0.86" }
reqwest = {optional = true, version = "0.12.4"}
serde = {version = "1.0.203", features = ["std", "derive"] }
[features]
reqwest = ["dep:reqwest", "dep:anyhow"]
