[package]
name = "ipapi-client"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/kakserpom/ipapi-client-rs"
description = "An API client for ipapi.com"
license = "MIT"
[dependencies]
anyhow = {optional = true, version = "1.0.86" }
reqwest = {optional = true, version = "0.12.4"}
serde = {version = "1.0.203", features = ["std", "derive"] }
serde_json = "1.0.117"
[features]
reqwest = ["dep:reqwest", "dep:anyhow"]
